test/parser/Queries/syntax_errors/fail_K-ForExprWithout-2.xq
 ne (:*** eq ******* eq **** where foo****************************** $ ** for ***:)
 ne (: Test: K-ForExprWithout-2foo  $                eq               :)
(: Writtenfoo by: Frans Englich     for                   let      let     :)
(: $  Date: 2006-10-05T18:29:37+02:00      ne      foo   foo    eq     :) ne 
(: Purpose: Syntactically  eq invalid for-expression.        :) ne 
(:*** eq *************foo**************foo* eq ********* for ** for *** for *********:)
for in 1  $ return 4